# FileGuard

./: .gitignore  CMakeLists.txt  README.md
scripts/: bootstrap.sh
src/: file_type.cpp  file_type.hpp  json_writer.cpp  json_writer.hpp  main.cpp  scanner.cpp  scanner.hpp  sha256.cpp  sha256.hpp  thread_pool.hpp  types.hpp
